--- a/Nez.Portable/Nez.csproj
+++ b/Nez.Portable/Nez.csproj
@@ -24,6 +24,10 @@
 	<PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
 		<OutputPath>bin\Release\</OutputPath>
 	</PropertyGroup>
+	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|netstandard2.0|AnyCPU'">
+	  <DebugType>full</DebugType>
+	  <DebugSymbols>true</DebugSymbols>
+	</PropertyGroup>
   
 	<ItemGroup>
 		<EmbeddedResource Include="Content\NezDefaultBMFont.xnb" />
